Add footer and link to github page as well as update the README.md

--- a/index.html
+++ b/index.html
@@ -71,8 +71,16 @@
             <p>Use <strong>[ Enter ] key</strong> or <strong>[ = ] key</strong> for equal button</p>
             <p>Use <strong>[ TAB ] key </strong>for the " +/- " button</p>
             <p>To <em>delete</em> the last character use <strong>[ Backspace ] key</strong></p>
-            <p>To <em>reset</em> the calculator use <strong>[ DEL ] key</strong></p>          
+            <p>To <em>reset</em> the calculator use <strong>[ DEL ] key</strong></p>
         </div>
+    </div>
+
+    <div class="footer">
+        <p class="footnote">
+            Jqyoung &copy; 2022
+        </p>
+        <a href="https://github.com/Jqyoung" target="_blank"><img src="/img/GitHub-Mark-Light-120px-plus.png"
+                alt="Github" class="icon"></a>
     </div>
 </body>
 
